[package]
name = "auralist-rs"
version = "0.0.2"
authors = ["Elliott Landsborough <elliott.landsborough@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search media files"
readme = "README.md"
homepage = "https://github.com/ElliottLandsborough/auralist-rs"
repository = "https://github.com/ElliottLandsborough/auralist-rs"
keywords = ["mp3", "indexer", "search"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
walkdir = "2"
flate2 = "1.0"
id3 = "1.12.0"
lofty = "*"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
mime_guess = "2.0"
async-stream = "0.3"
hyper = "1.1"
rand = "0.8.5"

[dependencies.rusqlite]
version = "0.30.0"
default-features = false # don't include any defaults
#features = ["backup"] # see rusqlite/blob/master/Cargo.toml
features = ["backup", "blob", "serde_json", "bundled"]
