[package]
name = "auralist-rs"
version = "0.0.23"
authors = ["Elliott Landsborough <elliott.landsborough@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search media files"
readme = "README.md"
homepage = "https://github.com/ElliottLandsborough/auralist-rs"
repository = "https://github.com/ElliottLandsborough/auralist-rs"
keywords = ["mp3", "indexer", "search"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
lofty = "*"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
rand = "0.8.5"
murmurhash32 = "0.3.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_seek_stream = "0.2.6"
dashmap = "5.5.3"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]